--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ application/logs/*
 !application/logs/index.html
 !application/logs/.htaccess
 /vendor/
+db.txt
+Dokumen Tubes Webpro 19 ASKLY .docx
